tests/architecture/fixtures/invalid/layer-boundaries/application-query-key-barrel.ts
export { legacyProductKeys } from "../../../../../apps/commerce/features/products/hooks/legacy-product-query-keys";
